<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_accent"
    android:padding="16dp"
    tools:context=".TransferenciaActivity">

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Salir"
        android:src="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/blue_primary"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_texts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="?attr/colorOnPrimary"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido_francisco"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                android:textSize="48sp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_tu_banco_de_confianza"
                android:textColor="?attr/colorPrimary"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qu_quieres_hacer_ahora"
                android:textColor="?attr/colorPrimary"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_perfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue_primary"
        android:text="@string/perfil_de_la_cuenta"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/card_texts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_servicios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue_primary"
        android:text="@string/servicios_del_banco"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_transferencias"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/blue_primary"
        android:text="@string/transferencias"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_servicios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/blue_accent"
        android:text="@string/_912345678"
        android:textColor="@color/blue_accent_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ubicacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/blue_accent"
        android:text="@string/sedes"
        android:textColor="@color/blue_accent_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

