<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="80dp"

    tools:context=".TransferenciaActivity">

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Salir"
        android:src="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorPrimary"
        tools:ignore="TouchTargetSizeCheck" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_transferencia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_logout">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


        <EditText
            android:id="@+id/edit_cuenta_destino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/Destino_de_transferencia"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorOnPrimary" />


        <EditText
            android:id="@+id/plain_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cuanto_vas_a_transferir"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorOnPrimary" />

            <TextView
                android:id="@+id/Pregunta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:buttonTint="?attr/colorTertiary"
                android:text="@string/tipo_de_transferencia"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp" />


            <RadioGroup
                android:id="@+id/tipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/paypal4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paypal_4"
                    android:textColor="?attr/colorOnPrimary" />

                <RadioButton
                    android:id="@+id/bbca18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bbva_18"
                    android:textColor="?attr/colorOnPrimary" />

                <RadioButton
                    android:id="@+id/caixa15t"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/caixabank_15"
                    android:textColor="?attr/colorOnPrimary" />
            </RadioGroup>

        <Switch
            android:id="@+id/round_up_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:checked="true"
            android:minHeight="48dp"
            android:text="@string/redondear"
            android:textColor="?attr/colorTertiary" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:text="Calcular"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@id/card_transferencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/transferido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="?attr/colorOnSecondary"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/calculate_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Cantidad a pagar: 10€" />

</androidx.constraintlayout.widget.ConstraintLayout>
