<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_accent"
    android:padding="16dp"
    tools:context=".SessionActivity">

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Salir"
        android:src="@drawable/ic_logout"
        app:tint="@color/blue_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="0dp"
        android:layout_height="430dp"
        android:layout_margin="16dp"
        android:padding="16dp"
        app:cardBackgroundColor="?attr/colorOnPrimary"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/colorOnPrimary"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logobankfra_1_" />

            <EditText
                android:id="@+id/cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="?attr/colorPrimary"
                android:hint="@string/nombre"
                android:inputType="text"
                android:minHeight="48dp"
                android:textAllCaps="false"
                android:textColor="?attr/colorPrimary"
                android:textColorHighlight="?attr/colorPrimary"
                android:textColorHint="?attr/colorPrimary" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="?attr/colorPrimary"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="?attr/colorPrimary"
                android:textColorHighlight="?attr/colorPrimary"
                android:textColorHint="?attr/colorPrimary" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/blue_primary"
                android:text="@string/iniciar_sesi_n"
                android:textColor="@color/white"
                android:translationY="2dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/el_banco_n_mero_1_del_mundo_y_mas_seguro_de_toda_espa_a"
        android:textAlignment="center"
        android:textColor="@color/blue_primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851" />

</androidx.constraintlayout.widget.ConstraintLayout>
