<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/blue_accent">

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Salir"
        android:src="@drawable/ic_logout"
        android:layout_margin="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/blue_primary" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_perfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        android:layout_marginTop="64dp"
        app:cardBackgroundColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/francisco"
                android:textColor="@color/blue_accent_dark"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/n_cuenta_9149843424"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_saldo_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Saldo disponible"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/blue_primary_dark"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/card_perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_saldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="€ 0,00"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/blue_primary_dark"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_saldo_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_saldo_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preguntas_frecuentes"
        android:textColor="@color/blue_primary_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_saldo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/frame_movimientos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_saldo_label2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_movimientos"
            app:layoutManager="LinearLayoutManager"
            android:scrollbars="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
